# binarr

./: Cargo.toml  flake.nix  shell.nix
src/: binary.rs  json.rs  main.rs  utils.rs
