[package]
name = "binarr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
num = { version = "0.4.3", features = ["serde"] }
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"

[dev-dependencies]
approx = "0.5.1"
hex = "0.4.3"
